# specodec-runtime-cpp

./: .gitignore  CMakeLists.txt  Containerfile.build  build.sh
src/: test_main.cpp
src/specodec/: float_fmt.cppm  gron_reader.cppm  gron_writer.cppm  json_reader.cppm  json_writer.cppm  msgpack_reader.cppm  msgpack_writer.cppm  scodec_error.cppm  spec_codec.cppm  spec_reader.cppm  spec_undefined.cppm  spec_writer.cppm  specodec.cppm
src/specodec/ryu/: ryu_f32.cppm  ryu_f64.cppm  ryu_math.cppm  tables_f32.cppm  tables_f64.cppm
tests/interop/: generate_emit_runner.mjs  package-lock.json  package.json  run_test.mjs  test.mjs
tests/interop/emit/: main.cppm  test_alltypes.cppm  test_alltypes_arrays.cppm  test_alltypes_edge.cppm  test_alltypes_enums.cppm  test_alltypes_extra.cppm  test_alltypes_many.cppm  test_alltypes_mixed.cppm  test_alltypes_nested.cppm  test_alltypes_nested_deep.cppm  test_alltypes_nests.cppm  test_alltypes_opt.cppm  test_alltypes_pairs.cppm  test_alltypes_recursive.cppm  test_alltypes_scalars.cppm  test_alltypes_unions.cppm  test_alltypes_wide.cppm
tests/interop/emit_gen/: AllTypesTypes.cppm  all_types_arrays_types.cppm  all_types_edge_types.cppm  all_types_enums_types.cppm  all_types_extra_types.cppm  all_types_many_types.cppm  all_types_mixed_types.cppm  all_types_nested_deep_types.cppm  all_types_nested_types.cppm  all_types_nests_types.cppm  all_types_opt_types.cppm  all_types_pairs_types.cppm  all_types_recursive_types.cppm  all_types_scalars_types.cppm  all_types_types.cppm  all_types_unions_types.cppm  all_types_wide_types.cppm
tests/interop/output/: AllOpt2.gron  AllOpt2.msgpack  AllOpt2.unformatted.json  ArrFloat64.gron  ArrFloat64.json  ArrFloat64.msgpack  DeepNest3.gron  DeepNest3.msgpack  DeepNest3.unformatted.json  DeepNest4.gron  DeepNest4.msgpack  DeepNest4.unformatted.json  DeepNest6.gron  DeepNest6.msgpack  DeepNest6.unformatted.json  DualFloat64Boolean.gron  DualFloat64Boolean.json  DualFloat64Boolean.msgpack  DualFloat64Bytes.gron  DualFloat64Bytes.json  DualFloat64Bytes.msgpack  DualFloat64Int32.gron  DualFloat64Int32.msgpack  DualFloat64Int32.unformatted.json  EnumArrHolder.gron  EnumArrHolder.json  EnumArrHolder.msgpack  EnumHolder.gron  EnumHolder.json  EnumHolder.msgpack  EnumOptHolder.gron  EnumOptHolder.json  EnumOptHolder.msgpack  Five01.gron  Five01.msgpack  Five01.unformatted.json  Five04.gron  Five04.msgpack  Five04.unformatted.json  Five06.gron  (+143 more)
tests/interop/test_cpp_out/: my_n_s_inner_deep_types.cppm  my_n_s_inner_types.cppm  my_n_s_types.cppm
tests/ryu/: test_ryu.cpp
